<resources>
    <string name="app_name">TeslaFi</string>
    <string name="action_sign_in_with_tesla_account">Sign in using Tesla Account</string>
    <string name="copy_tokens_dialog_close">Close</string>
    <string name="copy_tokens_dialog_explanation">Here are the Tesla tokens generated by this app. You can copy them from here and use them into other third-party apps. Most of third-party apps will accept the Owner API Token as login mean.</string>
    <string name="copy_tokens_dialog_owner_at_expire">Expires on %1$s</string>
    <string name="copy_tokens_dialog_owner_at_label">Owner API Access Token</string>
    <string name="copy_tokens_dialog_sso_rt_label">SSO Refresh Token</string>
    <string name="copy_tokens_dialog_title">My Tesla tokens</string>
    <string name="loggedin_menu_send_logs">Send app logs</string>
    <string name="login_failed">Login failed</string>
    <string name="main_menu_logout">Logout</string>
    <string name="main_refresh">Refresh the token</string>
    <string name="main_refresh_error">An error occurred</string>
    <string name="main_refresh_too_early">You token has been emitted less than 1 day ago, refresh is not needed for now</string>
    <string name="refresh_explanation">When the Owner API token expires, you can renew it using the button above. A new token will then be generated and you can replace the old one in your third-party applications.</string>
    <string name="succeed">Login succeed</string>
    <string name="version">TeslaFi %1$s</string>
</resources>